fix: overflow bug

--- a/src/Component/Footer/Footer.module.css
+++ b/src/Component/Footer/Footer.module.css
@@ -6,5 +6,5 @@
   justify-content: center;
   font-family: 'IBM-ExtraLight';
   font-size: 16px;
-  color: rgba(0, 0, 0, 0.4);
+  color: #fff;
 }
